# minimg

./: Cargo.toml  README.md  STATUS.md
src/: fs_utils.rs  lib.rs  main.rs  window.rs
