[package]
name = "minimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
env_logger = "0.9.0"
image = "0.24.3"
pollster = "0.2.5"
show-image = { version = "0.12.3", features = ["image", "png"] }
